--- a/partials/directory/directory.html
+++ b/partials/directory/directory.html
@@ -27,22 +27,25 @@
 				<button class="btn btn-default form-control" data-animation="am-fade-and-scale" data-template="partials/directory/employee-add.html" bs-modal="modal">
 					<span class="glyphicon glyphicon-plus"></span> Add Employee
 				</button>
-				<button type="button" class="btn btn-default form-control" data-ng-click="hideInactive = !hideInactive">
+				<button type="button" class="btn btn-default form-control" data-ng-click="hideInactive = !hideInactive" data-ng-hide="retired">
 					<span data-ng-hide="hideInactive" class="glyphicon glyphicon-eye-close"></span>
 					<span data-ng-show="hideInactive" class="glyphicon glyphicon-eye-open"></span>
 					&nbsp;Inactive Employees
 				</button>
-			</div>
-			<div data-ng-show="properties.currentUser.Position.Position === 'FTE' || properties.currentUser.Admin" class="btn-group">
-				<button type="button" class="btn btn-default form-control" data-ng-click="position.hide = !position.hide" data-ng-show="properties.currentUser.Admin">
-					<span data-ng-hide="position.hide" class="glyphicon glyphicon-eye-close"></span>
-					<span data-ng-show="position.hide" class="glyphicon glyphicon-eye-open"></span>
-					&nbsp;FTEs
+				<button type="button" class="btn btn-default form-control" data-ng-click="retired = !retired" data-ng-show="properties.currentUser.Position.Position === 'FTE' || properties.currentUser.Admin">
+					<span data-ng-show="retired" class="glyphicon glyphicon-eye-close"></span>
+					<span data-ng-hide="retired" class="glyphicon glyphicon-eye-open"></span>
+					&nbsp;Retired
 				</button>
-				<button type="button" class="btn btn-default form-control" data-ng-click="area.hideOthers = !area.hideOthers">
+				<button type="button" class="btn btn-default form-control" data-ng-click="area.hideOthers = !area.hideOthers" data-ng-show="properties.currentUser.Position.Position === 'FTE' || properties.currentUser.Admin">
 					<span data-ng-hide="area.hideOthers" class="glyphicon glyphicon-eye-close"></span>
 					<span data-ng-show="area.hideOthers" class="glyphicon glyphicon-eye-open"></span>
 					&nbsp;Other Areas
+				</button>
+				<button type="button" class="btn btn-default form-control" data-ng-click="position.hide = !position.hide" data-ng-show="properties.currentUser.Area.Description === 'Director' || properties.currentUser.Admin">
+					<span data-ng-hide="position.hide" class="glyphicon glyphicon-eye-close"></span>
+					<span data-ng-show="position.hide" class="glyphicon glyphicon-eye-open"></span>
+					&nbsp;FTEs
 				</button>
 			</div>
 			<refresh></refresh>
