--- a/partials/directory/grid-view.html
+++ b/partials/directory/grid-view.html
@@ -1,4 +1,4 @@
-<div data-ng-repeat="employee in arrays.directoryEmployees | orderBy:properties.predicate | employeeFilter:{inactive:hideInactive, area: area.hideOthers, position: position.hide} | filter:employeeSearch" class="col-sm-4 col-md-2 text-center well" style="height: 300px">
+<div data-ng-repeat="employee in data.employees | orderBy:properties.predicate | employeeFilter:{inactive:hideInactive, area: area.hideOthers, position: position.hide, retired: retired} | filter:employeeSearch" class="col-sm-4 col-md-2 text-center well" style="height: 300px">
 	<img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="img-circle" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
 	<div>
 		<b>{{employee.PreferredName}} {{employee.LastName}}</b>
@@ -10,7 +10,7 @@
 		INumber: {{employee.INumber}}
 		<br>Track: {{employee.Track.Description}}
 	</div>
-	<button data-ng-show="properties.currentUser.Position.Position === 'FTE'  || properties.currentUser.Admin" class="btn btn-link" data-animation="am-fade-and-scale" data-template="partials/directory/employee-edit.html" bs-modal="modal">
+	<button data-ng-show="properties.extendedPrivledges" class="btn btn-link" data-animation="am-fade-and-scale" data-template="partials/directory/employee-edit.html" bs-modal="modal">
 		<span class="glyphicon glyphicon-edit"></span>
 	</button>
 </div>
