--- a/partials/schedule/schedule.html
+++ b/partials/schedule/schedule.html
@@ -1,5 +1,5 @@
 <div data-ng-app="Scheduler">
-	<div>
+	<div class="container-fluid">
 		<div class="row">
 			<ul class="nav nav-pillsCustom nav-justified" bs-navbar>
 				<li data-match-route="/main/schedule/today" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position === 'Coordinator'">
