Fix position filtering and minor css tweeks

--- a/partials/directory/directory.html
+++ b/partials/directory/directory.html
@@ -35,7 +35,7 @@
 				<button type="button" class="btn btn-default form-control" data-ng-click="retired = !retired" data-ng-show="properties.currentUser.Position.Position === 'FTE' || properties.currentUser.Admin">
 					<span data-ng-show="retired" class="glyphicon glyphicon-eye-close"></span>
 					<span data-ng-hide="retired" class="glyphicon glyphicon-eye-open"></span>
-					&nbsp;Retired
+					&nbsp;Retired Employees
 				</button>
 				<button type="button" class="btn btn-default form-control" data-ng-click="area.hideOthers = !area.hideOthers" data-ng-show="properties.currentUser.Position.Position === 'FTE' || properties.currentUser.Admin">
 					<span data-ng-hide="area.hideOthers" class="glyphicon glyphicon-eye-close"></span>
