--- a/partials/schedule/myAvailability/my-availability.html
+++ b/partials/schedule/myAvailability/my-availability.html
@@ -27,7 +27,7 @@
                 <tbody>
                     <tr>
                         <td data-ng-repeat="day in arrays.weeks[0].days" class="text-center my-schedule" data-ng-hide="day.title === 'Sunday'" data-ng-class="{ weekend: day.weekend }">
-                            <div class="btn-group-vertical my-schedule">
+                            <div class="btn-group-vertical my-schedule"  style="min-height: 100px">
                                 <button class="btn my-schedule" data-ng-repeat="availability in day.myAvailabilities.currentSemester | orderBy:'StartTime':false" data-ng-hide="day.title === 'Sunday'" data-animation="am-fade-and-scale" data-template="partials/schedule/myAvailability/availability-edit.html" bs-modal="modal">
                                     {{availability.StartTime | date:'h:mm a'}} - {{availability.EndTime | date:'h:mm a'}}
                                 </button>
