--- a/partials/schedule/subShifts/subShift-take.html
+++ b/partials/schedule/subShifts/subShift-take.html
@@ -20,7 +20,7 @@
                     {{day.date | date:'MMM d'}}
                     <br>{{subShift.shift.StartTime | date:'hh:mm a'}} to {{subShift.shift.EndTime | date:'hh:mm a'}}
                     <br>
-                    <img data-ng-src="{{subShift.originalEmployee.Picture}}" class="img-circle center-block" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
+                    <img data-ng-src="{{subShift.originalEmployee.Picture}}" fallback-src="/media/missing.png" class="img-circle center-block" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
                     <br>{{subShift.originalEmployee.PreferredName}} {{subShift.originalEmployee.LastName}}
                 </div>
 
@@ -33,12 +33,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-5">
-                            <img data-ng-src="{{subShift.responsibleEmployee.Picture}}" class="img-circle center-block" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
+                            <img data-ng-src="{{subShift.responsibleEmployee.Picture}}" fallback-src="/media/missing.png" class="img-circle center-block" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
                         </div>
                         <div class="col-md-2">
                         </div>
                         <div class="col-md-5">
-                            <img data-ng-src="{{subShift.originalEmployee.Picture}}" class="img-circle center-block" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
+                            <img data-ng-src="{{subShift.originalEmployee.Picture}}" fallback-src="/media/missing.png" class="img-circle center-block" data-ng-style="{'max-width': '120px', 'max-height': '170px'}">
                         </div>
                     </div>
                     <div class="row text-center">
