--- a/partials/schedule/availableShifts/available-shifts.html
+++ b/partials/schedule/availableShifts/available-shifts.html
@@ -70,8 +70,8 @@
                                             <button class="btn btn-default" data-animation="am-fade-and-scale" data-template="partials/schedule/availableShifts/shift-edit.html" bs-modal="modal">
                                                 <span class="glyphicon glyphicon-edit"></span>
                                             </button>
-                                            <button class="btn btn-default" data-animation="am-fade-and-scale" data-template="partials/schedule/availableShifts/shift-delete.html" bs-modal="modal">
-                                                <span class="glyphicon glyphicon-remove"></span>
+                                            <button class="btn btn-danger" data-animation="am-fade-and-scale" data-template="partials/schedule/availableShifts/shift-delete.html" bs-modal="modal">
+                                                <span class="glyphicon glyphicon-trash"></span>
                                             </button>
                                         </div>
                                     </td>
