--- a/partials/directive-partials/available-shifts.html
+++ b/partials/directive-partials/available-shifts.html
@@ -53,8 +53,8 @@
 						<button class="btn btn-default" data-animation="am-fade-and-scale" data-template="partials/shift-edit.html" bs-modal="modal">
 							<span class="glyphicon glyphicon-edit"></span>
 						</button>
-						<button class="btn btn-default" data-animation="am-fade-and-scale" data-template="partials/shift-delete.html" bs-modal="modal">
-							<span class="glyphicon glyphicon-remove"></span>
+						<button class="btn btn-danger" data-animation="am-fade-and-scale" data-template="partials/shift-delete.html" bs-modal="modal">
+							<span class="glyphicon glyphicon-trash"></span>
 						</button>
 					</div>
 				</td>
