--- a/partials/schedule/schedule.html
+++ b/partials/schedule/schedule.html
@@ -2,13 +2,13 @@
 	<div class="container-fluid">
 		<div class="row">
 			<ul class="nav nav-pillsCustom nav-justified" bs-navbar>
-				<li data-match-route="/main/schedule/today" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position === 'Coordinator'">
+				<li data-match-route="/main/schedule/today" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position.Description === 'Coordinator'">
 					<a ui-sref="main.schedule.today" data-ng-click="ctrl.partialChange()">Today</a>
 				</li>
 				<li data-match-route="/main/schedule/schedule" data-ng-show="properties.extendedPrivledges">
 					<a ui-sref="main.schedule.schedule" data-ng-click="ctrl.partialChange()">Schedule</a>
 				</li>
-				<li data-match-route="/main/schedule/availability" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position === 'Coordinator'">
+				<li data-match-route="/main/schedule/availability" data-ng-show="properties.extendedPrivledges || properties.currentUser.Position.Description === 'Coordinator'">
 					<a ui-sref="main.schedule.availability" data-ng-click="ctrl.partialChange()">Availability</a>
 				</li>
 				<li data-match-route="/main/schedule/subShifts">
