--- a/partials/directory/employee-edit.html
+++ b/partials/directory/employee-edit.html
@@ -23,9 +23,9 @@
 						<li role="presentation" data-ng-class="{active: tab === 'subShifts'}">
 							<a data-ng-click="tab = 'subShifts'">SubShifts</a>
 						</li>
-						<!-- <li role="presentation" data-ng-class="{active: tab === 'messages'}">
+						<li role="presentation" data-ng-class="{active: tab === 'messages'}">
 							<a data-ng-click="tab = 'messages'">Messages</a>
-						</li> -->
+						</li>
 					</ul>
 				</div>
 				<buffer></buffer>
@@ -154,33 +154,50 @@
 				<div class="row-fluid" data-ng-show="tab === 'subShifts'">
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<b>{{employee.toString('name')}} {{(ctrl.isASub) ? ' is only a Sub.' : ' works a regular shift.'}}</b>
+							<ul class="list-group">
+								<li class="list-group-item" data-ng-class="{'list-group-item-danger': ctrl.isASub}">
+									<b>{{employee.toString('name')}} {{(ctrl.isASub) ? ' is only a Sub.' : ' works a regular shift.'}}</b>
+								</li>
+							</ul>
 						</div>
 					</div>
 					<buffer></buffer>
 					<div class="row">
 						<div class="col-md-6" style="border-right: 1px solid #ccc">
 							<h4>Worked Shifts</h4>
-							<ul class="list-group" style="max-height: 150px; overflow: scroll">
-								<li class="list-group-item" data-ng-repeat="subShift in ctrl.workedSubShifts | orderBy:'Date'">
-									{{subShift.Date.toString('dddd MMM dS')}} {{subShift.Shift.StartTime.toString('h:mm')}} - {{subShift.Shift.EndTime.toString('h:mm')}}
+							<ul class="list-group" style="height: 190px; overflow: scroll" data-ng-hide="ctrl.workedSubShifts.length === 0">
+								<li class="list-group-item text-center" data-ng-repeat="subShift in ctrl.workedSubShifts | orderBy:'Date'">
+									{{subShift.Date.toString('dddd MMM. dS')}}
+									<br>{{subShift.Shift.StartTime.toString('h:mm')}} - {{subShift.Shift.EndTime.toString('h:mm')}}
 								</li>
+							</ul>
+							<ul class="list-group" style="height: 190px; overflow: scroll" data-ng-show="ctrl.workedSubShifts.length === 0">
+								<li class="list-group-item text-center">No worked shifts.</li>
 							</ul>
 						</div>
 						<div class="col-md-6">
 							<h4>Requested Shifts</h4>
-							<ul class="list-group" style="max-height: 150px; overflow: scroll">
-								<li class="list-group-item" data-ng-repeat="subShift in ctrl.requestedSubShifts | orderBy:'Date'" data-ng-class="{'list-group-item-danger': (subShift.SubstituteId === undefined)}">
-									{{subShift.Date.toString('dddd MMM dS')}} {{subShift.Shift.StartTime.toString('h:mm')}} - {{subShift.Shift.EndTime.toString('h:mm')}}
+							<ul class="list-group" style="height: 190px; overflow: scroll" data-ng-hide="ctrl.requestedSubShifts.length === 0">
+								<li class="list-group-item text-center" data-ng-repeat="subShift in ctrl.requestedSubShifts | orderBy:'Date'" data-ng-class="{'list-group-item-danger': (subShift.SubstituteId === undefined)}">
+									{{subShift.Date.toString('dddd MMM. dS')}}
+									<br>{{subShift.Shift.StartTime.toString('h:mm')}} - {{subShift.Shift.EndTime.toString('h:mm')}}
 								</li>
+							</ul>
+							<ul class="list-group" style="height: 190px; overflow: scroll" data-ng-show="ctrl.requestedSubShifts.length === 0">
+								<li class="list-group-item text-center">No requested shifts.</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<!-- MESSAGES -->
-				<!-- <div class="row-fluid[" data-ng-show="tab === 'messages'"> -->
-				<!-- TODO: Create the messages view tab -->
-				<!-- </div> -->
+				<div class="row-fluid" data-ng-show="tab === 'messages'">
+					<h4>Unread Mandatory Messages</h4>
+					<ul class="list-group" style="height: 190px; overflow: scroll">
+						<li class="list-group-item" data-ng-show="ctrl.unreadMessages.length === 0">No unread messages.</li>
+						<li class="list-group-item" data-ng-repeat="message in ctrl.unreadMessages | orderBy:'Created'" data-ng-class="{'list-group-item-danger': message.OverDue}" data-ng-bind-html="message.Message">
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" ng-click="employee.refresh();$hide()">Cancel</button>
