--- a/partials/directory/employee-add.html
+++ b/partials/directory/employee-add.html
@@ -89,11 +89,11 @@
 				<div class="row-fluid form-horizontal">
 					<div class="well col-md-12">
 						<div class="btn-group btn-group-justified">
-							<div class="btn-group" role="group">
-								<button type="button" class="btn btn-default" data-ng-options="position.Id as position.Position for position in arrays.positions" ng-model="ctrl.newEmployee.PositionId" bs-select></button>
-							</div>
 							<div class="btn-group" role="group" data-ng-show="properties.currentUser.Admin || properties.currentUser.Area.Description === 'Director'">
-								<button type="button" class="btn btn-default" data-ng-options="area.Id as area.Area for area in data.areas" data-ng-model="ctrl.newEmployee.AreaId" bs-select></button>
+								<button type="button" class="btn btn-default" data-ng-options="area.Id as area.Description for area in data.areas" data-ng-model="ctrl.newEmployee.AreaId" data-ng-change="ctrl.updateArea(ctrl.newEmployee)" placeholder="Select area..." bs-select></button>
+							</div>
+							<div class="btn-group" role="group">
+								<button type="button" class="btn btn-default" data-ng-options="position.Id as position.Description for position in ctrl.newEmployee.Area.Positions" data-ng-disabled="!ctrl.newEmployee.Area.Id" data-ng-model="ctrl.newEmployee.PositionId" placeholder="Select position..." bs-select></button>
 							</div>
 							<div class="btn-group" role="group">
 								<button type="button" class="btn btn-default" ng-model="ctrl.newEmployee.Reader" bs-checkbox>{{(ctrl.newEmployee.Reader) ? 'A ' : 'Not a '}}reader</button>
