--- a/partials/directory/employee-edit.html
+++ b/partials/directory/employee-edit.html
@@ -59,21 +59,21 @@
 					</div>
 					<div class="col-md-6">
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Position:</label>
+							<label class="col-sm-3 control-label">Area:</label>
 							<div class="col-md-9">
 								<div class="btn-group-justified">
 									<div class="btn-group">
-										<button type="button" class="btn btn-default text-justify" data-ng-options="position.Id as position.Description for position in properties.currentUser.Area.Positions" ng-model="employee.PositionId" bs-select></button>
+										<button type="button" class="btn btn-default text-justify" data-ng-options="area.Id as area.Area for area in data.areas" ng-model="employee.AreaId" bs-select data-ng-disabled="!(properties.currentUser.Area.Description === 'Director' || properties.currentUser.Admin)" data-ng-change="ctrl.updateArea(employee)" placeholder="Select area..."></button>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-sm-3 control-label">Area:</label>
+							<label class="col-sm-3 control-label">Position:</label>
 							<div class="col-md-9">
 								<div class="btn-group-justified">
 									<div class="btn-group">
-										<button type="button" class="btn btn-default text-justify" data-ng-options="area.Id as area.Area for area in data.areas" ng-model="employee.AreaId" bs-select data-ng-disabled="!(properties.currentUser.Area.Description === 'Director' || properties.currentUser.Admin)"></button>
+										<button type="button" class="btn btn-default text-justify" data-ng-options="position.Id as position.Description for position in employee.Area.Positions" ng-model="employee.PositionId" placeholder="Select Position..." bs-select></button>
 									</div>
 								</div>
 							</div>
@@ -91,63 +91,144 @@
 						<div class="form-group">
 							<label class="col-md-3 control-label" for="readerCheckbox">Reader:</label>
 							<div class="col-md-9">
-								<input id="readerCheckbox" type="checkbox" ng-model="employee.Reader">
+								<div class="btn-group-justified">
+									<div class="btn-group">
+										<button type="button" class="btn btn-default" data-ng-click="employee.Reader = !employee.Reader">{{(employee.Reader) ? 'A ' : 'Not a '}}reader</button>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<!-- EMPLOYMENT -->
-				<div class="row-fluid text-center" data-ng-show="tab === 'employment'">
-					<div class="form-inline">
-						<div data-ng-repeat="employment in data.employments | filter:{EmployeeId: employee.Id}">
-							<div class="row-fluid">
-								<div class="form-group">
-									<div class="input-group">
-										<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="employment.StartDate" autoclose="true" data-ng-disabled="!employment.Edit">
-										<span class="input-group-addon">
-											to
-										</span>
-										<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="employment.EndDate" autoclose="true" data-ng-disabled="!employment.Edit">
-										<div class="input-group-btn">
-											<button type="button" class="btn btn-default" data-ng-show="employment.Edit" data-ng-click="employment.Edit = false">
-												<span class="glyphicon glyphicon-remove"></span>
-											</button>
-											<button type="button" class="btn btn-danger" data-ng-click="employment.remove()" data-ng-show="properties.currentUser.Admin && employment.Edit">
-												<span class="glyphicon glyphicon-trash"></span>
-											</button>
-											<button type="button" class="btn btn-default" data-ng-click="ctrl.editEmployment(employment)" data-ng-class="{'btn-success':employment.Edit}">
-												<span class="glyphicon glyphicon-edit" data-ng-hide="employment.Edit"></span>
-												<span class="glyphicon glyphicon-floppy-disk" data-ng-show="employment.Edit"></span>
-											</button>
+				<div class="row-fluid" data-ng-show="tab === 'employment'">
+					<div class="form-horizontal">
+						<!-- Existing Employments -->
+						<ul class="list-group" style="height: 200px; overflow: scroll">
+							<li class="list-group-item" data-ng-repeat="employment in data.employments | filter:{EmployeeId: employee.Id}">
+								<div class="row">
+									<div class="col-md-6">
+										<div class="form-group">
+											<label class="col-sm-3 control-label">Start:</label>
+											<div class="col-md-9">
+												<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="employment.StartDate" autoclose="true" data-ng-disabled="!employment.Edit">
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-sm-3 control-label">Area:</label>
+											<div class="col-md-9">
+												<div class="btn-group-justified">
+													<div class="btn-group">
+														<button type="button" class="btn btn-default text-justify" data-ng-options="area.Id as area.Description for area in data.areas" ng-model="employment.AreaId" bs-select data-ng-disabled="!employment.Edit" placeholder="Select area..." data-ng-change="ctrl.updateArea(employment)"></button>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="form-group">
+											<label class="col-sm-3 control-label">End:</label>
+											<div class="col-md-9">
+												<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="employment.EndDate" autoclose="true" data-ng-disabled="!employment.Edit">
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-sm-3 control-label">Position:</label>
+											<div class="col-md-9">
+												<div class="btn-group-justified">
+													<div class="btn-group">
+														<button type="button" class="btn btn-default text-justify" data-ng-options="position.Id as position.Description for position in employment.Area.Positions" ng-model="employment.PositionId" bs-select data-ng-disabled="!employment.Edit" placeholder="Select Position..."></button>
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<buffer></buffer>
-						</div>
-						<div style="border-bottom: 1px solid #ccc"></div>
-						<buffer></buffer>
-						<div class="row-fluid">
-							<div class="form-group">
-								<div class="input-group">
-									<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="ctrl.newEmployment.StartDate" autoclose="true" data-ng-disabled="!ctrl.newEmployment.Edit">
-									<span class="input-group-addon">
-										to
-									</span>
-									<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="ctrl.newEmployment.EndDate" autoclose="true" data-ng-disabled="!ctrl.newEmployment.Edit">
-									<div class="input-group-btn">
-										<button type="button" class="btn btn-default" data-ng-show="ctrl.newEmployment.Edit && ctrl.newEmployment.StartDate" data-ng-click="ctrl.newEmployment.Edit = false">
-											<span class="glyphicon glyphicon-remove"></span>
-										</button>
-										<button type="button" class="btn btn-default" data-ng-click="ctrl.addEmployment()" data-ng-class="{'btn-success':ctrl.newEmployment.Edit && ctrl.newEmployment.StartDate}">
-											<span class="glyphicon glyphicon-plus" data-ng-hide="ctrl.newEmployment.Edit"></span>
-											<span class="glyphicon glyphicon-floppy-disk" data-ng-show="ctrl.newEmployment.Edit && ctrl.newEmployment.StartDate"></span>
-											<span class="glyphicon glyphicon-remove" data-ng-show="ctrl.newEmployment.Edit && !ctrl.newEmployment.StartDate"></span>
-										</button>
+								<div class="row">
+									<div class="col-md-12">
+										<div class="pull-right">
+											<button type="button" class="btn btn-default" data-ng-click="ctrl.editEmployment(employment)" data-ng-hide="employment.Edit">
+												<span class="glyphicon glyphicon-edit"></span>
+											</button>
+											<div class="btn-group" data-ng-show="employment.Edit">
+												<button type="button" class="btn btn-default" data-ng-show="employment.Edit" data-ng-click="employment.Edit = false; employment.refresh()">
+													<span class="glyphicon glyphicon-remove"></span>
+												</button>
+												<button type="button" class="btn btn-success" data-ng-click="ctrl.editEmployment(employment)">
+													<span class="glyphicon glyphicon-floppy-disk"></span>
+												</button>
+												<button type="button" class="btn btn-danger" data-ng-click="employment.remove()" data-ng-show="properties.currentUser.Admin">
+													<span class="glyphicon glyphicon-trash"></span>
+												</button>
+											</div>
+										</div>
 									</div>
 								</div>
-							</div>
-						</div>
+							</li>
+						</ul>
+						<buffer></buffer>
+						<div style="border-bottom: 1px solid #ccc"></div>
+						<buffer></buffer>
+						<!-- New Employment -->
+						<ul class="list-group">
+							<li class="list-group-item">
+								<div class="row" data-ng-show="ctrl.newEmployment.Edit">
+									<div class="col-md-6">
+										<div class="form-group">
+											<label class="col-sm-3 control-label">Start:</label>
+											<div class="col-md-9">
+												<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="ctrl.newEmployment.StartDate" autoclose="true" data-ng-disabled="!ctrl.newEmployment.Edit">
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-sm-3 control-label">Area:</label>
+											<div class="col-md-9">
+												<div class="btn-group-justified">
+													<div class="btn-group">
+														<button type="button" class="btn btn-default text-justify" data-ng-options="area.Id as area.Description for area in data.areas" ng-model="ctrl.newEmployment.AreaId" bs-select data-ng-disabled="!ctrl.newEmployment.Edit" placeholder="Select area..." data-ng-change="ctrl.updateArea(ctrl.newEmployment)"></button>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="form-group">
+											<label class="col-sm-3 control-label">End:</label>
+											<div class="col-md-9">
+												<input type="text" class="form-control" name="date" bs-datepicker data-ng-model="ctrl.newEmployment.EndDate" autoclose="true" data-ng-disabled="!ctrl.newEmployment.Edit">
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-sm-3 control-label">Position:</label>
+											<div class="col-md-9">
+												<div class="btn-group-justified">
+													<div class="btn-group">
+														<button type="button" class="btn btn-default text-justify" data-ng-options="position.Id as position.Description for position in ctrl.newEmployment.Area.Positions" ng-model="ctrl.newEmployment.PositionId" bs-select data-ng-disabled="!ctrl.newEmployment.Area.Id" placeholder="Select position..."></button>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12 text-center">
+										<button type="button" class="btn btn-default" data-ng-click="ctrl.newEmployment.Edit = true" data-ng-hide="ctrl.newEmployment.Edit">
+											<span class="glyphicon glyphicon-plus"></span> New Employment Record
+										</button>
+										<div class="pull-right">
+											<div class="btn-group" data-ng-show="ctrl.newEmployment.Edit">
+												<button type="button" class="btn btn-default" data-ng-show="ctrl.newEmployment.Edit" data-ng-click="ctrl.newEmployment.Edit = false">
+													<span class="glyphicon glyphicon-remove"></span>
+												</button>
+												<button type="button" class="btn btn-success" data-ng-click="ctrl.addEmployment()">
+													<span class="glyphicon glyphicon-floppy-disk"></span>
+												</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+						</ul>
 					</div>
 				</div>
 				<!-- SUBSHIFTS -->
