--- a/partials/message/new-message.html
+++ b/partials/message/new-message.html
@@ -71,14 +71,12 @@
 					</div>
 					<div class="form-group well" data-ng-hide="properties.currentUser.Admin || properties.currentUser.Area.Description === 'Director'">
 						<label for="to">To:</label>
-						<div class="btn-group-justified">
-							<div class="btn-group">
-								<button type="button" class="btn btn-default" data-ng-model="ctrl.newMessage.Recipients" data-ng-options="employee as employee.Label for employee in ctrl.activeEmloyees" data-multiple="true" data-html="true" placeholder="Select employee(s)..." bs-select data-placement="bottom">
-									Action
-									<span class="caret"></span>
-								</button>
-							</div>
-						</div>
+						<ui-select multiple data-ng-model="ctrl.newMessage.Recipients" theme="bootstrap" close-on-select="false" title="Choose an Employee">
+							<ui-select-match placeholder="Select employee(s)...">{{$item.toString('name')}}</ui-select-match>
+							<ui-select-choices repeat="employee in ctrl.activeEmloyees | filter:{AreaId: properties.currentUser.AreaId} | filter:$select.search">
+								<span data-ng-bind-html="employee.Label"></span>
+							</ui-select-choices>
+						</ui-select>
 						<buffer></buffer>
 						<div style="height: 2px; border-top: 1px solid #ccc; text-align: center">
 							<span style="background-color: #f2f2f2; position: relative; top: -0.75em;">&nbsp;&nbsp;OR&nbsp;&nbsp;</span>
