--- a/partials/schedule/myAvailability/my-availability.html
+++ b/partials/schedule/myAvailability/my-availability.html
@@ -4,7 +4,7 @@
         <div class="col-md-2">
             <refresh></refresh>
             <buffer></buffer>
-            <button type="button" class="btn btn-default form-control" bs-modal="modal" data-template="partials/schedule/myAvailability/unavailable.html" data-animation="am-fade-and-scale">
+            <button type="button" class="btn btn-default form-control" bs-modal="modal" data-template="partials/schedule/myAvailability/unavailable.html" data-ng-disabled="properties.isASub" data-animation="am-fade-and-scale">
                 Unavailable
             </button>
             <buffer></buffer>
