--- a/partials/schedule/availability/availability.html
+++ b/partials/schedule/availability/availability.html
@@ -47,7 +47,7 @@
                                     <div>
                                         <img data-ng-src="{{employee.Picture}}" fallback-src="/media/missing.png" class="list-item img-circle" data-template="partials/schedule/employee-info.html" data-animation="am-flip-x" bs-tooltip="tooltip">
                                     </div>
-                                    {{employee.FirstName}} {{employee.LastName}}
+                                    {{employee.PreferredName}} {{employee.LastName}}
                                 </a>
                             </div>
                         </div>
